/*
 * $Id: ChangeLog,v 1.5152 2006/09/17 16:13:23 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2006-09-17 18:45 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/contrib/rdd_ads/ads1.c
    * removed unused variables and some minor cleanup.

  * xharbour/include/hbvm.h
  * xharbour/source/vm/hvm.c
    + added hb_vmPushDynSym( PHB_DYNS )
      It should allow most applications to not use [P]HB_SYMB at all.
      Removing PHB_SYMB from 3-rd party .c code may allow us to add
      freeing unused symbol tables from HVM in the future.

  * xharbour/source/rdd/usrrdd/usrrdd.c
    ! fixed typo in HB_TRACE message.

2006-09-17 12:11 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
  * source/pp/pptable.c
    * Minro refinment to last fix of END* rules

2006-09-17 11:55 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
  * source/pp/ppcore.c
    + added #error to list of directives trigerring bRule in hb_pp_ParseExpression()
    * Fixed getExpReal() to accept unmatched ( { and [ as valid expression (Clipper compatability

  * source/vm/classes.c
    * Fixed silly C&P error in last commit

2006-09-16 18:10 UTC-0300 Eduardo Fernandes <modalsist@yahoo.com.br>
  * source\rtl\memoedit.prg
    ! fixed K_ESC behaviour that wasn't exit while buffer is not changed.
    ! fixed to trap nextkey when a key is inserted into buffer by setkey.

  * source\rtl\teditor.prg
    ! fixed bug related to ME_TOGGLESCROLL behaviour. Bug reported by
      Ed. Horbino.
    ! fixed bug related to selection text and paste behaviour.
    + added support to K_SH_END and K_SH_HOME selection. keys.
    + added support to K_CTRL_RET key.
      * Thanks to Lorenzo Fiorini by fixes and adds.

2006-09-15 11:06 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
  * source/vm/classes.c