@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.5152 2006/09/17 16:13:23 ronpinkas Exp $
+ * $Id: ChangeLog,v 1.5153 2006/09/17 16:53:08 druzus Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,10 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2006-09-18 01:20 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
+  * xharbour/source/vm/classes.c
+    ! fixed GPF when non object item is passed to hb_objHasMessage()
 
 2006-09-17 18:45 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
   * xharbour/contrib/rdd_ads/ads1.c
